# research-toolkit

./: .gitignore  CONTRIBUTING.md  LICENSE_REVIEW.md  PROJECT_INDEX.md  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: data-boundaries.md  notebook-lineage.md
examples/code_submissions/: README.md
examples/output/: .gitkeep
notebooks/: analysis_overview_synthetic.ipynb  multivariable_analysis_synthetic.ipynb  testing_sample_detection_synthetic.ipynb
notebooks/source-cleaned/: copy-of-ai-code-detection-copy-of-ai-code-detection.ipynb  copy-of-ai-detection-analysis-copy-of-ai-detection-analysis.ipynb  copy-of-ai-trimming-copy-of-ai-trimming.ipynb  copy-of-arabic-coding-ai-pipeline-copy-of-arabic-coding-ai-pipeline.ipynb  copy-of-conflict-analysis-testing-sample-copy-of-conflict-analysis-testing-sample.ipynb  copy-of-extracting-code-samples-copy-of-extracting-code-samples.ipynb  copy-of-generating-ai-humanized-testing-samples-copy-of-generating-ai-humanized-testing-samples.ipynb  copy-of-generating-ai-prompts-copy-of-generating-ai-prompts.ipynb  copy-of-paper-2-adjusted-multivariable-analysis-year-fix-copy-of-paper-2-adjusted-multivariable-analysis-year-fix.ipynb  copy-of-paper-2-high-impact-detector-conflict-analysis-copy-of-paper-2-high-impact-detector-conflict-analysis.ipynb  copy-of-paper-2-openai-textual-pattern-analysis-assignment-corpus-fixed-v3-copy-of-paper-2-openai-textual-pattern-analysis-assignment-corpus-fixed-v3.ipynb  copy-of-paper-3-copy-of-paper-3.ipynb  (+3 more)
notebooks/workflows/: assignments-workflow.ipynb
(+3 files in other folders)
